php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29061 soap extension segfaults
Submitted: 2004-07-08 10:33 UTC Modified: 2004-07-19 14:54 UTC
From: tony2001 at phpclub dot net Assigned:
Status: Closed Package: SOAP related
PHP Version: 5CVS-2004-07-08 (dev) OS: Linux 2.4.23
Private report: No CVE-ID: None
 [2004-07-08 10:33 UTC] tony2001 at phpclub dot net
Description:
------------
SOAP ext segfaults with following backtrace:
---
Program received signal SIGSEGV, Segmentation fault.
0x401746a3 in strlen () from /lib/i686/libc.so.6
(gdb) bt
#0  0x401746a3 in strlen () from /lib/i686/libc.so.6
#1  0x402e49ee in do_request (this_ptr=0x817a044, request=0x817a1dc, location=0x8 <Address 0x8 out of bounds>,
    action=0x1 <Address 0x1 out of bounds>, version=135789172, response=0x817f85c)
    at /home/tony/CVS/php-src/ext/soap/soap.c:1958
#2  0x402e4f37 in do_soap_call (this_ptr=0x817a044, function=0x817a1dc "getQuote", function_len=8, arg_count=1,
    real_args=0x817fa74, return_value=0x817f85c, soap_action=0x0, call_uri=0x0, soap_headers=0x0, output_headers=0x0)
    at /home/tony/CVS/php-src/ext/soap/soap.c:2033
#3  0x402e65e1 in zif_SoapClient___call (ht=2, return_value=0x817f85c, this_ptr=0x817a044, return_value_used=1)
    at /home/tony/CVS/php-src/ext/soap/soap.c:2200
#4  0x40410d63 in zend_call_function (fci=0xbfffbc70, fci_cache=0x0) at /home/tony/CVS/php-src/Zend/zend_execute_API.c:853
#5  0x4040faf0 in call_user_function_ex (function_table=0x0, object_pp=0xbfffbd58, function_name=0xbfffbd00,
    retval_ptr_ptr=0xbfffbcec, param_count=2, params=0xbfffbcf0, no_separation=0, symbol_table=0x0)
    at /home/tony/CVS/php-src/Zend/zend_execute_API.c:550
#6  0x40435726 in zend_std_call_user_call (ht=1, return_value=0x817f76c, this_ptr=0x817a044, return_value_used=1)
    at /home/tony/CVS/php-src/Zend/zend_object_handlers.c:565
#7  0x404490e8 in zend_do_fcall_common_helper (execute_data=0xbfffcf80, opline=0x818a4a4, op_array=0x8179f94)
    at /home/tony/CVS/php-src/Zend/zend_execute.c:2699
#8  0x404497c4 in zend_do_fcall_by_name_handler (execute_data=0xbfffcf80, opline=0x818a4a4, op_array=0x8179f94)
    at /home/tony/CVS/php-src/Zend/zend_execute.c:2810
#9  0x404451b2 in execute (op_array=0x8179f94) at /home/tony/CVS/php-src/Zend/zend_execute.c:1391
#10 0x4041dbdb in zend_execute_scripts (type=8, retval=0x0, file_count=3) at /home/tony/CVS/php-src/Zend/zend.c:1061
#11 0x403d0611 in php_execute_script (primary_file=0xbffff310) at /home/tony/CVS/php-src/main/main.c:1632
#12 0x40451ffa in apache_php_module_main (r=0x8169584, display_source_mode=0)
    at /home/tony/CVS/php-src/sapi/apache/sapi_apache.c:54
#13 0x40453075 in send_php (r=0x8169584, display_source_mode=0, filename=0x8169b6c "/www/index.php")
    at /home/tony/CVS/php-src/sapi/apache/mod_php5.c:621
#14 0x40453106 in send_parsed_php (r=0x8169584) at /home/tony/CVS/php-src/sapi/apache/mod_php5.c:636
#15 0x08074542 in ap_invoke_handler ()
#16 0x0808a56a in process_request_internal ()
#17 0x0808a9d4 in ap_internal_redirect ()
#18 0x0806024a in handle_dir ()
#19 0x08074542 in ap_invoke_handler ()
#20 0x0808a56a in process_request_internal ()
#21 0x0808a5c7 in ap_process_request ()
#22 0x08080f80 in child_main ()
#23 0x08081132 in make_child ()
#24 0x080812b1 in startup_children ()
#25 0x0808199b in standalone_main ()
#26 0x08082235 in main ()
#27 0x4010faf7 in __libc_start_main () from /lib/i686/libc.so.6
--

Reproduce code:
---------------
$client = new SoapClient("stocks.wsdl"); 
try {
	print($client->getQuote("ibm")); 
} catch (SoapFault $exception) { 
	echo $exception; 
}

stocks.wsdl:
<definitions xmlns="http://schemas.xmlsoap.org/wsdl/" xmlns:soap="http://schemas.xmlsoap.org/wsdl/soap/" xmlns:http="http://
schemas.xmlsoap.org/wsdl/http/" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:soapenc="http://schemas.xmlsoap.org/soap/e
ncoding/" xmlns:mime="http://schemas.xmlsoap.org/wsdl/mime/" xmlns:y="http://new.webservice.namespace" targetNamespace="http
://new.webservice.namespace">
<types>
<xs:schema/>
</types>
<message name="getQuoteResponse">
<part name="parameter" element="" type="xs:string"/>
</message>
<message name="getQuoteRequest">
<part name="String" element="" type="xs:string"/>
</message>
<portType name="SOAPport">
<operation name="getQuote">
<input message="y:getQuoteRequest"/>
<output message="y:getQuoteResponse"/>
</operation>
</portType>
<binding name="bindingName" type="y:SOAPport">
<soap:binding style="rpc" transport="http://schemas.xmlsoap.org/soap/http"/>
<operation name="getQuote">
<input>
<soap:body use="literal"/>
</input>
<output>
<soap:body use="literal"/>
</output>
</operation>
</binding>
<service name="myService">
<port name="myPort" binding="y:bindingName">
<soap:address location="http://xrs.spdllc.com/server2.php"/>
</port>
</service>
</definitions>


Expected result:
----------------
-

Actual result:
--------------
-

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-07-19 14:54 UTC] dmitry@php.net
Fixed in CVS HEAD.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 19 03:00:01 2026 UTC