Fixed bug #29061 (soap extension segfaults).